# old-vectorizer-webgpu-reference

./: Cargo.toml
src/: canvas.rs  data.rs  frontend.rs  lib.rs
src/canvas/: cg_backend.rs  wgpu_backend.rs
src/canvas/wgpu_backend/: draw.rs  gpu_target.rs  helpers.rs  init.rs  update.rs
src/data/: collections.rs  draw_cmds.rs  drawable.rs  geometry.rs  geometry_impl.rs  gpu_types.rs  picture.rs
src/renderer/: draw.rs  init.rs  pipeline.rs  state.rs  update.rs
