[package]
name = "old-vectorizer-webgpu-reference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
itertools = "0.10.0"
rayon = "1.5.3"
either = "1"
lyon = {version = "1", features = ["extra"]}
# wgpu-hal = {version = "0.13.2", features = ["metal"]}
# wgpu-core = "0.13.2"
wgpu = "0.14.2"
bytemuck = "1.2.0"
metal = "0.24.0"
objc = "0.2.7"
core-graphics = "0.22.3"
futures = "0.3.5"
winit = "0.27.5"
usvg = "0.15.0"

# smaa = "0.8.0"
# naga = "0.10.0"
# smaa = {path = "../smaa-rs"}

# foreign-types = "0.3"
# gl = "0.14"
# metal = "0.18"
# objc = "0.2"
# sdl2 = "0.33"
# sdl2-sys = "0.33"






